# haskell-webapi-boilerplate

./: .env  .envrc.sample  .gitignore  LICENSE  README.md  docker-compose.yaml
database/: Dockerfile  entrypoint.sh  migrate.sh
database/migrations/: 20220403030537_example_table.sql  20220530025639_create-initial-roles.sql  20220530025639_create_initial_roles.sql  20220530030432_create-example-table.sql  20220530154022_create_task_table.sql  20220530154515_create_task_status_lookup.sql  20220530160247_create_task_statuses.sql
database/post-scripts/users/: reporting.sql  webserver.sql
scripts/: build-sqlx.sh  dotenv.sh  sqlx.sh
webapi/: .dockerignore  .gitignore  Dockerfile  boilerplate.cabal  cabal.project.freeze  fourmolu.yaml  package.yaml  stack.yaml
webapi/.github/actions/stack-build/: action.yaml
webapi/.github/workflows/: ci.yaml
webapi/app/: Main.hs
webapi/src/: Boilerplate.hs
webapi/src/Boilerplate/: Api.hs  App.hs  Config.hs  Database.hs  Http.hs  Logging.hs
webapi/src/Boilerplate/Api/: Middleware.hs  Routes.hs
webapi/src/Boilerplate/HealthChecks/: Api.hs  Http.hs
webapi/src/Boilerplate/Http/: Helpers.hs  Middleware.hs  Routes.hs
webapi/src/Boilerplate/Todos/: Database.hs  Http.hs  Task.hs
webapi/src/Boilerplate/Todos/Task/: Description.hs  NewStatus.hs
webapi/src/Boilerplate/Users/: Password.hs  Username.hs
webapi/test/: TestApp.hs
webapi/test/Boilerplate/HealthChecks/: ApiSpec.hs  HttpSpec.hs
webapi/test/Boilerplate/Users/: PasswordSpec.hs  UserName.hs  UsernameSpec.hs
webapi/test/TestApp/: Database.hs
